--- a/vintelo-ejs-main/app/views/pages/bossartigo.ejs
+++ b/vintelo-ejs-main/app/views/pages/bossartigo.ejs
@@ -14,9 +14,9 @@
             <p>10% OFF na primeira compra</p>
         </section>
         <nav class="main-nav">
-            <a href="/index"><img src="imagens/logo.png" alt="Vintélo" class="logo"></a>
+            <a href="/"><img src="imagens/logo.png" alt="Vintélo" class="logo"></a>
             <ul class="nav-links">
-                <li><a href="/index">Início</a></li>
+                <li><a href="/">Início</a></li>
                 <li><a href="/blog">Blog</a></li>
                 <li><a href="/categorias">Vestidos</a></li>
                 <li><a href="/categorias">Blusas</a></li>
@@ -68,7 +68,6 @@
 
                 <section class="products-grid">
                     <section class="product-card">
-                        <img src="imagens/modelo milão 1.png" alt="Look BOSS" class="product-image high-quality-image">
                         <p class="product-description">
                             O diretor criativo da BOSS, Marco Falcioni, apresentou uma visão única onde a tecnologia 
                             não substitui a humanidade, mas a complementa. Os looks apresentaram cortes precisos, 
@@ -77,7 +76,6 @@
                     </section>
                     
                     <section class="product-card">
-                        <img src="imagens/modelo milão 1.png" alt="Acessórios BOSS" class="product-image high-quality-image">
                         <p class="product-description">
                             Clássico como era esperado, mas o destaque ficou para os acessórios de cabelo, com coques 
                             presos com canetas e grampos definindo penteados futuristas. Essa abordagem inovadora 
