--- a/vintelo-ejs-main/app/views/pages/brechoadm.ejs
+++ b/vintelo-ejs-main/app/views/pages/brechoadm.ejs
@@ -16,7 +16,7 @@
                     <img src="imagens/seta.png" alt="Voltar">
                 </a>
                 <img src="imagens/logo.png" alt="Logo">
-                <img src="imagens/quadrado.png" class="img-branca">
+                <img src="imagens/icone saco.png" class="img-branca">
             </nav>
         </header>
     </section>
@@ -31,14 +31,16 @@
                 <img src="imagens/logo.png" class="img-logo">
             </a>
             <nav>
-                <a href="/homeadm">Voltar ao Painel</a>
-                <a href="/usuariosadm">Usuários</a>
+                <a href="/homeadm" class="adm">Home Admin</a>
+                <a href="/denuncias" class="adm">Denúncias</a>
+                <a href="/avaliacaoadm" class="adm">Avaliações</a>
+                <a href="/editarbanners" class="adm">Banners</a>
             </nav>
             <section class="search-profile">
                 <ul>
                     <li><img src="imagens/icone sem cadastro.png" class="maria"></li>
                     <li><img src="imagens/icone saco.png" class="img-tamanho"></li>
-                    <li><img src="imagens/icone coração.png" class="img-tamanho2"></li>
+                    <li><img src="imagens/icone saco.png" class="img-tamanho2"></li>
                 </ul>
             </section>
         </header>
@@ -282,9 +284,20 @@
     </script>
 
     <footer class="footer">
-        <img src="imagens/logo2.jpeg" alt="Imagem do Rodapé" class="footer-image">
+        <img src="imagens/logo2.jpeg" alt="Logo Vintélo" class="footer-image">
         <section class="social-media">
             <p class="p-footer">Painel Administrativo</p>
+            <ul class="social-links">
+                <li><a href="https://facebook.com" target="_blank" class="social-link">
+                    <img src="imagens/Facebook.png" alt="Facebook">
+                </a></li>
+                <li><a href="https://pinterest.com" target="_blank" class="social-link">
+                    <img src="imagens/Pinterest.png" alt="Pinterest">
+                </a></li>
+                <li><a href="https://www.instagram.com/vintelobrechos" target="_blank" class="social-link">
+                    <img src="imagens/Instagram.png" alt="Instagram">
+                </a></li>
+            </ul>
         </section>
         <p class="copyright">©2024 Vintélo Admin. Todos os direitos reservados.</p>
     </footer>
