--- a/vintelo-ejs-main/app/views/pages/denuncias.ejs
+++ b/vintelo-ejs-main/app/views/pages/denuncias.ejs
@@ -31,8 +31,21 @@
                 <img src="imagens/logo.png" class="img-logo">
             </a>
             <nav>
-                <a href="/homeadm">Voltar</a>
+                <a href="/homeadm">Home Admin</a>
+                <a href="/blogadm">Blog</a>
+                <a href="/denuncias">Denúncias</a>
+                <a href="/avaliacaoadm">Avaliações</a>
             </nav>
+            <section class="search-profile">
+                <form>
+                    <input type="text" placeholder="Buscar...">
+                </form>
+                <ul>
+                    <li><a href="/homeadm"><img src="imagens/icone sem cadastro.png" class="maria"></a></li>
+                    <li><a href="/homeadm"><img src="imagens/icone saco.png" class="img-tamanho"></a></li>
+                    <li><a href="/homeadm"><img src="imagens/icone coraçao.png" class="img-tamanho2"></a></li>
+                </ul>
+            </section>
         </header>
     </section>
 
@@ -191,7 +204,7 @@
                         <span class="status-text">Caso resolvido</span>
                     </section>
                 </article>
-            <% } %>
+
         </section>
     </main>
 
@@ -215,11 +228,28 @@
     </script>
 
     <footer class="footer">
-        <img src="imagens/logo2.jpeg" alt="Imagem do Rodapé" class="footer-image">
+        <img src="imagens/logo2.jpeg" alt="Vintélo" class="footer-image">
         <section class="social-media">
-            <p class="p-footer">Painel Administrativo</p>
+            <p class="p-footer">Siga nossas redes sociais</p>
+            <ul class="social-links">
+                <li class="social-link">
+                    <a href="https://www.instagram.com/vintelobrechos" target="_blank">
+                        <img src="imagens/Instagram.png" alt="Instagram">
+                    </a>
+                </li>
+                <li class="social-link">
+                    <a href="https://facebook.com/vintelo" target="_blank">
+                        <img src="imagens/Facebook.png" alt="Facebook">
+                    </a>
+                </li>
+                <li class="social-link">
+                    <a href="https://pinterest.com/vintelo" target="_blank">
+                        <img src="imagens/Pinterest.png" alt="Pinterest">
+                    </a>
+                </li>
+            </ul>
         </section>
-        <p class="copyright">©2024 Vintélo Admin. Todos os direitos reservados.</p>
+        <p class="copyright">©2024 Vintélo. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
