--- a/vintelo-ejs-main/app/views/pages/editarbanners.ejs
+++ b/vintelo-ejs-main/app/views/pages/editarbanners.ejs
@@ -9,17 +9,20 @@
 </head>
 <body>
     
-    <!-- Header Mobile
-    <header class="mobile-header mobile-only">
-        <a href="/homeadm">
-            <img src="imagens/seta.png" alt="Voltar">
+    <!-- Header Mobile -->
+    <section class="oculto-desktop">
+    <header>
+      <nav class="grid">
+        <a href="/cadastro">
+          <img src="imagens/seta.png" alt="Seta Voltar">
         </a>
-        <h1><span class="highlight">VINTÉLO</span></h1>
-        <a href="/homeadm">
-            <img src="imagens/carrinho.png" alt="Home">
+        <img src="imagens/logo.png" alt="Logo">
+        <a href="/carrinho">
+          <img src="imagens/carrinho.png" alt="Carrinho">
         </a>
+      </nav>
     </header>
-      -->
+    </section>
     <!-- Header Desktop -->
     <section class="oculto-mobile">
         <section class="discount-banner">
@@ -89,6 +92,7 @@
             </section>
           </section>
             <!-- Banners Mobile -->
+             <section class="oculto-desktop">
             <section class="banner-section">
                 <h3>Banners Mobile</h3>
                 
@@ -118,6 +122,7 @@
                         <small>Recomendado: 800x300px</small>
                     </section>
                 </section>
+            </section>
             </section>
 
             <section class="form-actions">
