--- a/vintelo-ejs-main/app/views/pages/editarpost.ejs
+++ b/vintelo-ejs-main/app/views/pages/editarpost.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editar Post - Vintélo</title>
+    <title>Vintélo</title>
     <link rel="stylesheet" href="css/editarpost.css">
     <link rel="icon" href="/imagens/brilhoescuro.png" type="image/x-icon">
 </head>
