--- a/vintelo-ejs-main/app/views/pages/enviopedido.ejs
+++ b/vintelo-ejs-main/app/views/pages/enviopedido.ejs
@@ -16,7 +16,7 @@
           <p>10% OFF na primeira compra</p>
       </section>
       <section class="main-header">
-        <a href="/index">
+        <a href="/">
           <img src="imagens/logo.png" class="img-logo">
           </a>
           <nav>
