--- a/vintelo-ejs-main/app/views/pages/finalizandocompra1.ejs
+++ b/vintelo-ejs-main/app/views/pages/finalizandocompra1.ejs
@@ -117,7 +117,7 @@
   <!--  parte para desktop-->
     <section class="oculto-mobile">
       <nav class="grid">
-        <a href="/index">
+        <a href="/">
           <img src="imagens/logo.png"class="logo">
         </a>
 
