--- a/vintelo-ejs-main/app/views/pages/minhascompras.ejs
+++ b/vintelo-ejs-main/app/views/pages/minhascompras.ejs
@@ -5,7 +5,6 @@
   <head>
     <title>Vintélo</title>
     <link rel="stylesheet" href="css/minhascompras.css">
-
     <link rel="icon" href="/imagens/brilhoescuro.png" type="image/x-icon">
     
   </head>
@@ -31,9 +30,9 @@
             <input type="text" placeholder="Buscar...">
           </form>
           <ul>
-            <li><a href="#"><img src="imagens/icone sem cadastro.png" class="img-tamanho"></a></li>
-            <li><a href="#"><img src="imagens/add brecho.png" class="img-tamanho"></a></li>
-            <li><a href="#"><img src="imagens/icone coraçao.png" class="img-tamanho"></a></li>
+            <li><a href="/perfilcliente"><img src="imagens/icone sem cadastro.png" class="img-tamanho"></a></li>
+            <li><a href="/criarbrecho"><img src="imagens/add brecho.png" class="img-tamanho"></a></li>
+            <li><a href="/favoritos"><img src="imagens/icone coraçao.png" class="img-tamanho"></a></li>
           </ul>
         </section>
       </section>
@@ -46,7 +45,7 @@
           <a href="/homecomprador">
             <img src="imagens/seta.png" alt="seta-voltar">
           </a>
-          <img src="imagens/titulo-minhas compras.png" alt="Logo">
+          <h1>Minhas compras</h1>
           <a href="/carrinho">
             <img src="imagens/carrinho.png" alt="Descrição da Imagem" />
           </a>
