--- a/vintelo-ejs-main/app/views/pages/perfil1.ejs
+++ b/vintelo-ejs-main/app/views/pages/perfil1.ejs
@@ -212,6 +212,7 @@
         <button onclick="loadMoreProducts()">Ver mais</button>
     </section>
 
+    <script src="js/filtros.js"></script>
     <script src="perfilbrecho.js"></script>
     <!-- Rodapé -->
     <footer class="footer">
