--- a/vintelo-ejs-main/app/views/pages/perfil2.ejs
+++ b/vintelo-ejs-main/app/views/pages/perfil2.ejs
@@ -20,11 +20,11 @@
                 <img src="imagens/logo.png" class="img-logo" alt="Vintélo">
             </a>
             <nav>
-                <a href="#">Vestidos</a>
-                <a href="#">Saias</a>
-                <a href="#">Blusas</a>
-                <a href="#">Calças</a>
-                <a href="#">Outros</a>
+                <a href="/categorias">Vestidos</a>
+                <a href="/categorias">Saias</a>
+                <a href="/categorias">Blusas</a>
+                <a href="/categorias">Calças</a>
+                <a href="/categorias">Outros</a>
             </nav>
             <section class="search-profile">
                 <form>
