--- a/vintelo-ejs-main/app/views/pages/perfilvender.ejs
+++ b/vintelo-ejs-main/app/views/pages/perfilvender.ejs
@@ -21,11 +21,11 @@
                 <img src="imagens/logo.png" class="img-logo">
                 </a>
                 <nav>
-                    <a href="#">Vestidos</a>
-                    <a href="#">Saias</a>
-                    <a href="#">Blusas</a>
-                    <a href="#">Calças</a>
-                    <a href="#">Outros</a>
+                    <a href="/categorias">Vestidos</a>
+                    <a href="/categorias">Saias</a>
+                    <a href="/categorias">Blusas</a>
+                    <a href="/categorias">Calças</a>
+                    <a href="/categorias">Categorias</a>
                 </nav>
                 <section class="search-profile">
                     <form>
@@ -85,67 +85,54 @@
                       <a href="/adicionar"><img src="imagens/add.png" alt="Adicionar Item" class="img-add"></a> 
                         <p class="titulo-add">Adicionar Item à loja</p>
             </section>
-                <!-- Produto 1 -->
-                <article class="product-card">
-                    <img src="imagens/oculos.png" alt="Óculos de sol" class="product-image">
-                    <h3 class="product-title">Óculos de Sol</h3>
-                    <p class="product-price">R$12,00</p>
-                    <button class="favorite"><img src="imagens/icone favorito.png" alt="Favoritar"></button>
-                    <button class="cart"><img src="imagens/impulsionar.png" alt="Impulsionar"></button>
+                <article class="product-card" data-category="acessorios">
+                    <img src="imagens/oculos.png" alt="Óculos de Sol">
+                    <h2>Óculos de Sol</h2>
+                    <p class="price">R$12,00</p>
+                    <p class="Descrição">ou em 2x de R$6,00</p>
+                    <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
                 </article>
-        
-                <!-- Produto 2 -->
-                <article class="product-card">
-                    <img src="imagens/colar.png" alt="Conjunto 3 colares de prata" class="product-image">
-                    <h3 class="product-title">Conjunto 3 Colares de Prata</h3>
-                    <p class="product-price">R$29,99</p>
-                    <button class="favorite"><img src="imagens/icone favorito.png" alt="Favoritar"></button>
-                    <button class="cart"><img src="imagens/impulsionar.png" alt="Impulsionar"></button>
+                <article class="product-card" data-category="acessorios">
+                    <img src="imagens/colar.png" alt="Conjunto 3 Colares de Prata">
+                    <h2>Conjunto 3 Colares de Prata</h2>
+                    <p class="price">R$29,99</p>
+                    <p class="Descrição">ou em 2x de R$15,00</p>
+                    <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
                 </article>
-        
-                <!-- Produto 3 -->
-                <article class="product-card">
-                    <img src="imagens/bolsa.png" alt="Bolsa preta com alça dourada" class="product-image">
-                    <h3 class="product-title">Bolsa Preta com Alça Dourada</h3>
-                    <p class="product-price">R$20,00</p>
-                    <button class="favorite"><img src="imagens/icone favorito.png" alt="Favoritar"></button>
-                    <button class="cart"><img src="imagens/impulsionar.png" alt="Impulsionar"></button>
+                <article class="product-card" data-category="acessorios">
+                    <img src="imagens/bolsa.png" alt="Bolsa Preta com Alça Dourada">
+                    <h2>Bolsa Preta com Alça Dourada</h2>
+                    <p class="price">R$20,00</p>
+                    <p class="Descrição">ou em 2x de R$10,00</p>
+                    <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
                 </article>
-        
-                <!-- Produto 4 -->
-                <article class="product-card">
-                    <img src="imagens/aneis.png" alt="Anel de prata" class="product-image">
-                    <h3 class="product-title">Anel de Prata</h3>
-                    <p class="product-price">R$15,00</p>
-                    <button class="favorite"><img src="imagens/icone favorito.png" alt="Favoritar"></button>
-                    <button class="cart"><img src="imagens/impulsionar.png" alt="Impulsionar"></button>
+                <article class="product-card" data-category="acessorios">
+                    <img src="imagens/aneis.png" alt="Anel de Prata">
+                    <h2>Anel de Prata</h2>
+                    <p class="price">R$15,00</p>
+                    <p class="Descrição">ou em 2x de R$7,50</p>
+                    <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
                 </article>
-
-                                <!-- Produto 5 -->
-                <article class="product-card">
-                    <img src="imagens/saia rosa brilhante.png" alt="Anel de prata" class="product-image">
-                    <h3 class="product-title">Saia Brilhante</h3>
-                    <p class="product-price">R$35,00</p>
-                    <button class="favorite"><img src="imagens/icone favorito.png" alt="Favoritar"></button>
-                    <button class="cart"><img src="imagens/impulsionar.png" alt="Impulsionar"></button>
+                <article class="product-card" data-category="saias">
+                    <img src="imagens/saia rosa brilhante.png" alt="Saia Brilhante">
+                    <h2>Saia Brilhante</h2>
+                    <p class="price">R$35,00</p>
+                    <p class="Descrição">ou em 2x de R$17,50</p>
+                    <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
                 </article>
-
-                                <!-- Produto 6 -->
-                <article class="product-card">
-                    <img src="imagens/saia marrom de couro.png" alt="Saia De couro" class="product-image">
-                    <h3 class="product-title">Saia De Couro"</h3>
-                    <p class="product-price">R$15,00</p>
-                    <button class="favorite"><img src="imagens/icone favorito.png" alt="Favoritar"></button>
-                    <button class="cart"><img src="imagens/impulsionar.png" alt="Impulsionar"></button>
+                <article class="product-card" data-category="saias">
+                    <img src="imagens/saia marrom de couro.png" alt="Saia De Couro">
+                    <h2>Saia De Couro</h2>
+                    <p class="price">R$15,00</p>
+                    <p class="Descrição">ou em 2x de R$7,50</p>
+                    <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
                 </article>
-
-                                <!-- Produto 7 -->
-                <article class="product-card">
-                    <img src="imagens/cropped cinza.png" alt="Cropped Bufante" class="product-image">
-                    <h3 class="product-title">Cropped Bufante</h3>
-                    <p class="product-price">R$35,00</p>
-                    <button class="favorite"><img src="imagens/icone favorito.png" alt="Favoritar"></button>
-                    <button class="cart"><img src="imagens/impulsionar.png" alt="Impulsionar"></button>
+                <article class="product-card" data-category="blusas">
+                    <img src="imagens/cropped cinza.png" alt="Cropped Bufante">
+                    <h2>Cropped Bufante</h2>
+                    <p class="price">R$35,00</p>
+                    <p class="Descrição">ou em 2x de R$17,50</p>
+                    <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
                 </article>
             </section>
         </section>
