--- a/vintelo-ejs-main/app/views/pages/produto2.ejs
+++ b/vintelo-ejs-main/app/views/pages/produto2.ejs
@@ -41,23 +41,19 @@
         </header>
     </section>
     <section class="oculto-desktop">
-    <header>
-      <nav class="grid">
-        <a href="/index">
-         <img src="imagens/seta.png">
+        <a href="/">
+         <img src="imagens/seta.png" class="img-seta">
         </a>
-        <img src="imagens/logo.png">
-         <img src="imagens/foto-branca.png" alt="Descrição da Imagem" />
-      </nav>
-    </header>
-</section>
+    </section>
+
+    <!--       Estilo Mobile  -->
         <section class="oculto-desktop">
         <img src="imagens/produto2.png" alt="img-responsiva" class="main-image">
     </section>
        <section class="product-view">
     <main>
 
-                <center><img src="imagens/fila-vestido-branco.png" alt="img-responsiva"></center>
+         <center><img src="imagens/fila-vestido-branco.png" alt="img-responsiva"></center>
           <section class="produto-container">
             <h1>Vestido Branco Com Decote</h1>
             <section class="preco">
@@ -114,6 +110,10 @@
       </li>
     </ul>
         </section>
+        </main>
+        </section>
+
+         <!--       Estilo desktop  -->   
     <section class="oculto-mobile">
     <main class="produto-container">
         <section class="imagem-produto">
@@ -150,7 +150,7 @@
                 </ul>
             </section>
 
-            <button class="btn-sacola"><a href="/finalizandocompra2" class="link-branco">Adicionar à sacola</button></a>
+            <button class="btn-sacola"><a href="/finalizandopagamento" class="link-branco">Adicionar à sacola</button></a>
 
             <section class="tamanhos-alternativos">
                 <p class="detalhe"><b>Seu tamanho não está disponível? Encontre peças similares:</b></p>
