--- a/vintelo-ejs-main/app/views/pages/ecologicoartigo.ejs
+++ b/vintelo-ejs-main/app/views/pages/ecologicoartigo.ejs
@@ -14,9 +14,9 @@
             <p>10% OFF na primeira compra</p>
         </section>
         <nav class="main-nav">
-            <a href="/index"><img src="imagens/logo.png" alt="Vintélo" class="logo"></a>
+            <a href="/"><img src="imagens/logo.png" alt="Vintélo" class="logo"></a>
             <ul class="nav-links">
-                <li><a href="/index">Início</a></li>
+                <li><a href="/">Início</a></li>
                 <li><a href="/blog">Blog</a></li>
                 <li><a href="/categorias">Vestidos</a></li>
                 <li><a href="/categorias">Blusas</a></li>
