--- a/vintelo-ejs-main/app/views/pages/produto3.ejs
+++ b/vintelo-ejs-main/app/views/pages/produto3.ejs
@@ -43,7 +43,7 @@
     <section class="oculto-desktop">
     <header>
       <nav class="grid">
-        <a href="/index">
+        <a href="/">
          <img src="imagens/seta.png">
         </a>
         <img src="imagens/logo.png">
